test/parse/module/reference-types-disabled.txt
;;; TOOL: wat2wasm
;;; ERROR: 1

(module
  (table $t 1 anyref)
  (func
    i32.const 0
    i32.const 0
    table.get $t
    table.set $t
  )
)
(;; STDERR ;;;
out/test/parse/module/reference-types-disabled.txt:9:5: error: opcode not allowed: table.get
    table.get $t
    ^^^^^^^^^
out/test/parse/module/reference-types-disabled.txt:10:5: error: opcode not allowed: table.set
    table.set $t
    ^^^^^^^^^
;;; STDERR ;;)
